--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -46,8 +46,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secret.ACCESS_KEY }}
-          aws-secret-access-key: ${{ secret.SECRET_KEY }}
+          aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.SECRET_KEY }}
           aws-region: us-east-1
 
       - name: Upload to S3
