--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -51,4 +51,4 @@ jobs:
           aws-region: us-east-1
 
       - name: Upload to S3
-        run: aws s3 cp ${{ github.sha }}.zip s3://my-dash-github/$${{ github.sha }}.zip
+        run: aws s3 cp ${{ github.sha }}.zip s3://new-bucket-gha/${{ github.sha }}.zip
