--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -6,8 +6,32 @@ on:
       - main
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Chechout Code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.8"
+
+      - name: Install linting libraries
+        run: |
+          cd function
+          pip install flake8
+
+      - name: Lint with flake8
+        run: |
+          # Select identifies which errors should cause the job to fail
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # The exit zero flag will show errors as warnings and not fail the run
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Chechout Code
         uses: actions/checkout@v4
