--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -105,7 +105,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: upload
+    needs: test
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
