--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Create test function
         run: |
-          aws lambda create-function --function-name test-function${{ matrix.input }} \
+          aws lambda create-function --function-name test-function-${{ matrix.input }} \
             --code S3Bucket=new-bucket-gha,S3Key=${{ github.sha }}.zip \
             --handler lambda_function.lambda_handler --runtime python3.8 \
             --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
