--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -84,18 +84,21 @@ jobs:
       matrix:
         input: [ "Hello", "Hi" ]
     steps:
+      -
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+
       - name: Create test function
         run: |
           aws lambda create-function --function-name test-function-${{ matrix.input }} \
-            --code S3Bucket=new-bucket-gha,S3Key=${{ github.repository }}/${{ github.sha }}.zip \
+            --code S3Bucket=new-bucket-gha,S3Key=${{ github.sha }}.zip \
             --handler lambda_function.lambda_handler --runtime python3.8 \
             --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
+
       - name: Invoke test function
         run: |
           aws lambda invoke --function-name test-function-${{ matrix.input }} \
@@ -104,6 +107,7 @@ jobs:
           if grep -q "Error" out; then
             exit1
           fi
+
       - name: Destroy test function
         if: ${{ always() }}
         run: |
